# dialogue-prompt

./: .gitignore  README.md  prd.txt
backend/: pyproject.toml  run.py
backend/app/: main.py
backend/app/routers/: __init__.py  prompt.py
frontend/: .gitignore  package-lock.json  package.json  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/about/: page.tsx
frontend/src/app/create/: page.tsx
frontend/src/app/history/: page.tsx
frontend/src/components/: Footer.tsx  Header.tsx
